--- a/package.json
+++ b/package.json
@@ -1,25 +1,18 @@
 {
-
   "name": "Example",
-
   "description": "Example",
-
-  "version": "0.0.0",
-
+  "version": "1.0.0",
   "main": "bot.js",
-
   "scripts": {
-
     "start": "node bot.js"
-
   },
-
   "dependencies": {
-
-    "discord.js": "11.1.0",
-
-    "request": "2.81.0"
-
+    "axios": "^0.19.0",
+    "cheerio": "^1.0.0-rc.3",
+    "discord.js": "^11.5.1",
+    "es6-promise": "^4.2.8",
+    "isomorphic-fetch": "^2.2.1",
+    "request": "2.81.0",
+    "request-promise": "^4.2.4"
   }
-
 }
