--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "heroku": "^7.28.0",
     "isomorphic-fetch": "^2.2.1",
     "request": "2.81.0",
-    "request-promise": "^4.2.4"
+    "request-promise": "^4.2.4",
+    "sprintf-js": "^1.1.2"
   }
 }
